mise à jour de la route

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 
 
     </div>
+    <nav>
+        <a href="/">home</a>
+        <a href="#!comments">comments</a>
+    </nav>
 </body>
 
 </html>
